Address Yuye's comments
Signed-off-by: Zirui Song <zrsong@amazon.com>